--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,8 +16,10 @@
     "@types/react-dom": "^18.3.0",
     "chart.js": "^4.4.4",
     "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-crosshair": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
@@ -53,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chartjs-plugin-crosshair": "^1.1.4",
     "tailwindcss": "^3.4.10"
   }
 }
